[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Aseel-Z <aseelalzweri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
